# fnVault

./: .fnaws  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  aws-to-vault.sh  k8s-credential.sh  sign.sh  with-gcp.sh
.github/workflows/: ci.yml  release.yml
Formula/: fnvault.rb
crates/vault/: Cargo.toml
crates/vault/src/: client.rs  main.rs  skills.rs  tui.rs
crates/vaultcore/: Cargo.toml  build.rs
crates/vaultcore/src/: backup.rs  crypto.rs  error.rs  keychain.rs  keychain_shim.m  lib.rs  paths.rs  protocol.rs  session.rs  store.rs  totp.rs
crates/vaultcore/src/platform/: linux.rs  macos.rs  mod.rs
crates/vaultd/: Cargo.toml
crates/vaultd/src/: main.rs
scripts/: aws-to-vault.sh  sign.sh  with-gcp.sh
skills/: SKILL.md
skills/references/: commands.md  injection.md  integrations.md  security.md
skills/templates/: inject-secrets.sh  rotate-check.sh
