[workspace]
resolver = "2"
members = ["crates/vaultcore", "crates/vaultd", "crates/vault"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["fnVault"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
argon2 = "0.5"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
clap_complete = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
rpassword = "7"
