[package]
name = "vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vaultcore = { path = "../vaultcore" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
arboard.workspace = true
rpassword.workspace = true
libc.workspace = true
