[package]
name = "vaultcore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
chrono.workspace = true
dirs.workspace = true
argon2.workspace = true
hmac.workspace = true
sha1.workspace = true
base32.workspace = true

[build-dependencies]
cc = "1"
