[package]
name = "vaultcore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
chrono.workspace = true
dirs.workspace = true
argon2.workspace = true
hmac.workspace = true
sha1.workspace = true
base32.workspace = true

# Linux secret storage via the Secret Service (gnome-keyring / KWallet).
# Compiled only on Linux; macOS uses the Keychain shim instead. The
# async-secret-service + async-io + crypto-rust combo is pure Rust (zbus, no
# system libdbus) and avoids nesting a second tokio runtime inside the daemon's.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = [
    "async-secret-service",
    "async-io",
    "crypto-rust",
] }
# Lock-event observer: logind sleep + session lock (system bus) and the
# freedesktop screensaver (session bus). Pure-Rust, async-io executor to match
# keyring (no system libdbus, no nested tokio runtime).
zbus = { version = "4", default-features = false, features = ["async-io"] }

[build-dependencies]
cc = "1"
