[package]
name = "vaultd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vaultd"
path = "src/main.rs"

[dependencies]
vaultcore = { path = "../vaultcore" }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
zeroize.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
libc.workspace = true
